# Deploy-ML-Models

./: .gitignore  LICENSE  README.md
DeployMachineLearningModelstoProduction-Singh/workbooks/: model_making.ipynb
LoadFlaskDeploy/: Dockerfile  README.md  deployment.yaml  pyproject.toml  runner.zsh
LoadFlaskDeploy/model/: model_serve.ini  model_serve.py  model_util.py
LoadFlaskDeploy/notebook_libs/: prometheus.py  utilities.py
LoadFlaskDeploy/notebooks/: EDA.ipynb
SimpleFlaskDeploy/: Dockerfile  deployment.yaml  pyproject.toml
SimpleFlaskDeploy/data/: feature_vetting.csv  neural_net_scaler.pkl
SimpleFlaskDeploy/model/: model_serve.ini  model_serve.py  training_data.py
SimpleFlaskDeploy/workbooks/: model_making.ipynb  model_using.ipynb
SimpleTFFlaskDeploy/: Dockerfile  README.md  deployment.yaml  pyproject.toml
SimpleTFFlaskDeploy/data/: decision_tree.pkl  neural_net.pkl
SimpleTFFlaskDeploy/model/: model_serve.py
SimpleTFFlaskDeploy/workbooks/: Earnings Model Deploy Brownbag.ipynb  decision_tree.pkl  model_making.ipynb  model_making_brownbag.ipynb  model_using.ipynb
TimeseriesFlaskDeploy/: Dockerfile  README.md  deployment.yaml  docker-compose.yaml  pvc.yaml  pyproject.toml
TimeseriesFlaskDeploy/data/: example_wp_log_peyton_manning.csv
TimeseriesFlaskDeploy/model/: model_serve.ini  model_serve.py  training_data.py
TimeseriesFlaskDeploy/workbooks/: Time Series Model Deploy Brownbag.ipynb  model_making.ipynb
