[tool.poetry]
name = "loadflaskdeploy"
version = "0.1.0"
description = ""
authors = ["Scott Hendrickson <scott@drskippy.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
numpy = "^1.24.0"
flask = "^2.2.2"
uwsgi = "^2.0.21"
joblib = "^1.2.0"
requests = "^2.28.1"
prometheus-flask-exporter = "^0.21.0"
psutil = "^5.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
