[tool.poetry]
name = "loadflaskdeploy"
version = "0.1.0"
description = ""
authors = ["Scott Hendrickson <scott@drskippy.net>"]
readme = "README.md"

[tool.poetry.dependencies]
## manually for tensorflow
python = ">=3.10,<3.11"
##python = "^3.10"
pandas = "^1.5.2"
numpy = "^1.24.0"
flask = "^2.2.2"
uwsgi = "^2.0.21"
joblib = "^1.2.0"
requests = "^2.28.1"
prometheus-flask-exporter = "^0.21.0"
psutil = "^5.9.4"
tensorflow = "^2.11.0"
scikit-learn = "^1.2.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.2"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
numpy = "^1.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
